--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,19 @@
   to { height: 0; }
 }
 
+/* Animation Delay Utilities */
+.animation-delay-100 {
+  animation-delay: 100ms;
+}
+
+.animation-delay-200 {
+  animation-delay: 200ms;
+}
+
+.animation-delay-300 {
+  animation-delay: 300ms;
+}
+
 /* Focus Visible for Accessibility */
 :focus-visible {
   outline: 2px solid rgb(var(--ring));
